tests/ui/derives/derives-span-Default-tuple-struct.stderr
error[E0277]: the trait bound `Error: Default` is not satisfied
  --> $DIR/derives-span-Default-tuple-struct.rs:8:5
   |
LL | #[derive(Default)]
   |          ------- in this derive macro expansion
LL | struct Struct(
LL |     Error
   |     ^^^^^ the trait `Default` is not implemented for `Error`
  --> $SRC_DIR/core/src/default.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Default)]`
   |
help: consider annotating `Error` with `#[derive(Default)]`
   |
LL + #[derive(Default)]
LL | struct Error;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
